--- a/single-page-profile/src/App.css
+++ b/single-page-profile/src/App.css
@@ -1,24 +1,33 @@
 .App {
   text-align: center;
-  background-color: #ffffff;
+  background-color: #fff;
 }
-
-.my-picture {
+#profile__img {
   width: 6rem;
   border-radius: 50%;
 }
 
+.share-icon {
+  border: 2px dotted #EAECF0;
+  padding: 0.5rem;
+  border-radius: 50%;
+  position: absolute;
+  right: 20rem;
+  top: 2rem;
+}
+
 .App-header {
-  margin-top: 3rem;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
+  position: relative;
 }
 
-#btn__twitter,
+#twitter,
 #btn__zuri,
 #books,
 #book__python,
@@ -28,13 +37,31 @@
   text-decoration: none;
   display: block;
   padding: 1rem;
-  margin: 1rem 0.5rem;
+  margin: 0.5rem 0.5rem 1rem 0.5rem;
   border-radius: 0.5rem;
   background-color: #EAECF0;
 }
 
 .icon {
   width: 2rem;
+  margin-left: 1rem;
+  margin-top: 0.5rem;
+}
+
+.icon-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.footer {
+  width: 90vw;
+  margin: 10rem auto 0 auto;
+}
+
+.left-icon {
+  height: 3vh;
 }
 
 .main-links {
