style: style 'contact me' button

--- a/single-page-profile/src/App.css
+++ b/single-page-profile/src/App.css
@@ -41,7 +41,8 @@
 #books,
 #book__python,
 #pitch,
-#book__design {
+#book__design,
+#contact {
   color: black;
   text-decoration: none;
   display: block;
