--- a/single-page-profile/src/App.css
+++ b/single-page-profile/src/App.css
@@ -123,7 +123,10 @@ label {
 #first_name,
 #last_name,
 #message {
-  padding: 5px;
+  padding: 0.6rem;
+  outline: none;
+  border-radius: 0.3rem;
+  border: 1px solid rgb(155, 150, 150);
 }
 
 #email,
@@ -140,14 +143,32 @@ label {
   margin-right: 1rem;
 }
 
+#first_name:focus,
+#last_name:focus,
+#email:focus,
+#message:focus {
+  border: 1px solid#1570EF;
+}
+
+#check-box:hover {
+  cursor: pointer;
+  box-shadow: 1px 1px 10px #1570EF;
+}
+
 #btn__submit {
   width: 100%;
   background-color: #1570EF;
   color: #fff;
   border: none;
   padding: 0.5rem;
+  border: 5px solid #1570EF;
   margin-top: 1rem;
   border-radius: 0.3rem;
+}
+
+#btn__submit:hover {
+  border: 5px solid #D1E9FF;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 425px) and (min-width:200px) {
