--- a/single-page-profile/src/App.css
+++ b/single-page-profile/src/App.css
@@ -201,7 +201,7 @@ label {
   }
 }
 
-@media screen and (max-width: 425px) and (min-width:200px) {
+@media screen and (max-width: 511px) and (min-width:200px) {
   .share-icon-mobile {
     display: block;
     border: none;
@@ -222,5 +222,13 @@ label {
     display: block;
     text-align: left;
     margin: 0.5rem 0;
+  }
+
+  .left-icon {
+    margin-bottom: 0.5rem;
+  }
+
+  .right-icon {
+    margin-top: 0.5rem;
   }
 }
